<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/background_app">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2:00"
            android:textStyle="bold"
            android:typeface="monospace"
            android:textSize="50sp"
            android:textColor="@color/button_decline"
            android:layout_marginBottom="16dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_above="@id/cardView"
            android:layout_centerHorizontal="true" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:requiresFadingEdge="vertical"
            app:cardCornerRadius="30dp"
            android:elevation="10dp"
            android:background="@color/cardBackgroundLogin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textViewPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_activity_question"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/textColor"/>

            <LinearLayout
                android:id="@+id/emailContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/textViewPrompt"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/person_32"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="user@gmail.com"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"/>

            </LinearLayout>

                <TextView
                    android:id="@+id/textViewDevice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"/>

                <TextView
                    android:id="@+id/name_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Linux"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/textColor"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_below="@id/textViewDevice"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/textViewLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/near"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textStyle="bold"
                        android:textColor="@color/textColor"/>

                    <ImageButton
                        android:id="@+id/buttonMap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/map"
                        android:background="?android:selectableItemBackground"
                        android:contentDescription="@string/open_map" />

                </LinearLayout>

                <TextView
                    android:id="@+id/name_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Romania"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/textColor"/>

                <TextView
                    android:id="@+id/textViewTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/textColor"/>

                <TextView
                    android:id="@+id/time_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12:38"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/textColor"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">

                    <TextView
                        android:id="@+id/textViewCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_background"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp"
                        android:text="123456"
                        android:textAppearance="?attr/textAppearanceHeadline4"
                        android:layout_gravity="center"
                        android:textColor="@color/textColor"/>

                    <TextView
                        android:id="@+id/expiredTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp"
                        android:layout_gravity="center"
                        android:text="@string/expired"
                        android:textAppearance="?attr/textAppearanceHeadline4"
                        android:textColor="@color/textColor"
                        android:background="@drawable/blur_effect"
                        android:visibility="invisible" />
                </FrameLayout>

                <Button
                    android:id="@+id/buttonDecline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/textViewCode"
                    android:text="@string/decline"
                    android:background="@drawable/button_background"
                    android:textColor="@android:color/white"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:layout_marginTop="15dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>